// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The app renders the 404 1`] = `
<div>
  <h1>
    t(Page Does Not Exist)
  </h1>
</div>
`;

exports[`The app renders the hello world 1`] = `
<div>
  <h1>
    t(hello-world)
  </h1>
</div>
`;
